--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 # Site settings
-title: Qian's Blog
-SEOTitle: 虎哥的博客 | Huhu Blog
+title: Koyo Blog
+SEOTitle: 虎哥的博客 | Koyo Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: qzy922@gmail.com
 description: "Cool Blog"
 keyword: ""
 #url: "http://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
-
 
 
 # SNS settings
@@ -48,16 +47,18 @@ duoshuo_share: true                     # set to false if you want to use Commen
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b35c404edec0879e21940eda6ea698dc
+#ba_track_id: b35c404edec0879e21940eda6ea698dc
+ba_track_id: a2bb43ef451f25a0f65288a7a1189357
 # Google Analytics
-ga_track_id: 'UA-73383919-1'            # Format: UA-xxxxxx-xx
-ga_domain: koyo.xyz
-
+#ga_track_id: 'UA-73383919-1'
+ga_track_id: 'UA-73383919-2'
+#ga_domain: blog.koyo.xyz
+ga_domain: koyo922.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-koyo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 # Featured Tags
