--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,13 @@ description: "Cool Blog"
 keyword: ""
 #url: "http://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+timezone: +0900
+future: true
 
 
 # SNS settings
 RSS: false
-weibo_username:     2045173904
+weibo_username:     2045173904  # caution, non-VIP users maybe using number-ids
 zhihu_username:     qian-wei-shuo
 github_username:    koyo922
 #twitter_username:  huxpro
@@ -24,6 +26,7 @@ permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+gems: [jekyll-paginate, jemoji]
 
 
 # Markdown settings
@@ -34,8 +37,7 @@ markdown: kramdown
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
   syntax_highlighter: rouge
-
-
+  default_lang: bash
 
 # Disqus settings
 #disqus_username: _your_disqus_short_name_
@@ -87,8 +89,6 @@ friends: [
     }
 ]
 
-gems: [jekyll-paginate, jemoji]
-
 defaults:
     -
       scope:
@@ -98,3 +98,4 @@ defaults:
           css: "koyo-markdown"
           author: "koyo"
           layout: "post"
+
