--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ ga_domain: koyo922.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 # sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
-sidebar-about-description: "我爱北京三里屯！"
+sidebar-about-description: "可道，可名"
 sidebar-avatar: /img/avatar-koyo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
