--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ ga_domain: koyo922.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 # sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
-sidebar-about-description: "可道，可名"
+sidebar-about-description: "我要吃：麻辣香锅、重庆火锅、重庆小面、烤肉串、烤鱼、水煮鱼、兰州牛肉面、桂林米粉、炕土豆……"
 sidebar-avatar: /img/avatar-koyo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -76,13 +76,10 @@ friends: [
         title: "Hux Blog",
         href: "http://huangxuan.me"
     },{
-        title: "Foo",
-        href: "#"
+        title: "devtang",
+        href: "http://blog.devtang.com/"
     },{
         title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
         href: "#"
     },{
         title: "It helps SEO",
