--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ ga_domain: koyo922.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 # sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
-sidebar-about-description: "我要吃：麻辣香锅、重庆火锅、重庆小面、烤肉串、烤鱼、水煮鱼、兰州牛肉面、桂林米粉、炕土豆、东坡肉、炖腊蹄子、干煸四季豆、清炒荷兰豆……"
+sidebar-about-description: "我想吃：麻辣香锅、重庆火锅、重庆小面、烤肉串、烤鱼、水煮鱼、兰州牛肉面、桂林米粉、炕土豆、东坡肉、炖腊蹄子、干煸四季豆、清炒荷兰豆……"
 sidebar-avatar: /img/avatar-koyo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
